--- a/cmake/aesversion.h.in
+++ b/cmake/aesversion.h.in
@@ -1,5 +1,5 @@
 #ifndef LSKUSE_AES_VERSION_H
-#define LSKSUE_AES_VERSION_H
+#define LSKUSE_AES_VERSION_H
 
 #define LSKUSE_AES_VERSION_MAJOR @lskuse_aes_VERSION_MAJOR@
 #define LSKUSE_AES_VERSION_MINOR @lskuse_aes_VERSION_MINOR@
