Update project namespace to match GitHub username

--- a/cmake/aesversion.h.in
+++ b/cmake/aesversion.h.in
@@ -1,7 +1,7 @@
-#ifndef LSKUSE_AES_VERSION_H
-#define LSKUSE_AES_VERSION_H
+#ifndef SKUSEL_AES_VERSION_H
+#define SKUSEL_AES_VERSION_H
 
-#define LSKUSE_AES_VERSION_MAJOR @lskuse_aes_VERSION_MAJOR@
-#define LSKUSE_AES_VERSION_MINOR @lskuse_aes_VERSION_MINOR@
+#define SKUSEL_AES_VERSION_MAJOR @skusel_aes_VERSION_MAJOR@
+#define SKUSEL_AES_VERSION_MINOR @skusel_aes_VERSION_MINOR@
 
-#endif // LSKUSE_AES_VERSION_H
+#endif // SKUSEL_AES_VERSION_H
