--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.21)
 ###############################################################################
 # project description
 ###############################################################################
-project(lskuse_aes VERSION 1.0)
+project(skusel_aes VERSION 0.1.0)
 
 ###############################################################################
 # project dev tools info
@@ -31,17 +31,17 @@ string(APPEND CMAKE_CXX_FLAGS_DEBUG " -Wall -Wextra -Werror")
 ###############################################################################
 # options
 ###############################################################################
-option(LSKUSE_AES_ASAN "Turn on address sanitizer" OFF)
-option(LSKUSE_AES_USAN "Turn on undefined behavior sanitizer" OFF)
-option(LSKUSE_AES_BUILD_TESTING "Build LSKUSE_AES tests when BUILD_TESTING is enabled" PROJECT_IS_TOP_LEVEL)
+option(SKUSEL_AES_ASAN "Turn on address sanitizer" OFF)
+option(SKUSEL_AES_USAN "Turn on undefined behavior sanitizer" OFF)
+option(SKUSEL_AES_BUILD_TESTING "Build SKUSEL_AES tests when BUILD_TESTING is enabled" PROJECT_IS_TOP_LEVEL)
 
 ###############################################################################
 # disable/enable sanitizers
 ###############################################################################
-if(LSKUSE_AES_ASAN)
+if(SKUSEL_AES_ASAN)
   string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address")
 endif()
-if(LSKUSE_AES_USAN)
+if(SKUSEL_AES_USAN)
   string(APPEND CMAKE_CXX_FLAGS " -fsanitize=undefined")
 endif()
 
@@ -54,22 +54,25 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 # set vars
 ###############################################################################
 include(GNUInstallDirs)
-set(LSKUSE_AES_TARGET_NAME ${PROJECT_NAME})
-set(LSKUSE_AES_EXPORT_NAME ${LSKUSE_AES_TARGET_NAME}Targets)
-set(LSKUSE_AES_BIN_INSTALL_DIR ${CMAKE_INSTALL_BINDIR})
-set(LSKUSE_AES_LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
-set(LSKUSE_AES_INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})
+set(SKUSEL_AES_TARGET_NAME ${PROJECT_NAME})
+set(SKUSEL_AES_EXPORT_NAME ${SKUSEL_AES_TARGET_NAME}Targets)
+set(SKUSEL_AES_BIN_INSTALL_DIR ${CMAKE_INSTALL_BINDIR})
+set(SKUSEL_AES_LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
+set(SKUSEL_AES_INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})
 
 ###############################################################################
 # fetch thirdparty dependencies
 ###############################################################################
 include(FetchContent)
 #set(FETCHCONTENT_QUIET ON)
-if(LSKUSE_AES_BUILD_TESTING)
+# Avoid warning about DOWNLOAD_EXTRACT_TIMESTAMP
+if(${CMAKE_VERSION} VERSION_EQUAL "3.24.0" OR ${CMAKE_VERSION} VERSION_GREATER "3.24.0")
+  cmake_policy(SET CMP0135 NEW)
+endif()
+if(SKUSEL_AES_BUILD_TESTING)
   FetchContent_Declare(
     googletest
-    GIT_REPOSITORY https://github.com/google/googletest.git
-    GIT_TAG e2239ee6043f73722e7aa812a459f54a28552929 # version 1.11.0
+    URL https://github.com/google/googletest/archive/f8d7d77c06936315286eb55f8de22cd23c188571.zip #v1.14.0
   )
   FetchContent_MakeAvailable(googletest)
 endif()
@@ -77,29 +80,29 @@ endif()
 ###############################################################################
 # create version header file
 ###############################################################################
-configure_file(cmake/aesversion.h.in ${PROJECT_SOURCE_DIR}/include/lskuse/aesversion.h)
+configure_file(cmake/aesversion.h.in ${PROJECT_SOURCE_DIR}/include/skusel/aesversion.h)
 
 ###############################################################################
 # add library
 ###############################################################################
-set(LSKUSE_AES_SRC
+set(SKUSEL_AES_SRC
   src/aes.cpp
   src/aesblock.cpp
   src/aeskeysched.cpp
 )
-set(LSKUSE_AES_HEADERS
-  include/lskuse/aes.h
-  include/lskuse/aesversion.h
+set(SKUSEL_AES_HEADERS
+  include/skusel/aes.h
+  include/skusel/aesversion.h
 )
-add_library(${LSKUSE_AES_TARGET_NAME} ${LSKUSE_AES_SRC})
-add_library(${PROJECT_NAME}::${LSKUSE_AES_TARGET_NAME} ALIAS ${LSKUSE_AES_TARGET_NAME})
-target_include_directories(${LSKUSE_AES_TARGET_NAME} PUBLIC include)
+add_library(${SKUSEL_AES_TARGET_NAME} ${SKUSEL_AES_SRC})
+add_library(${PROJECT_NAME}::${SKUSEL_AES_TARGET_NAME} ALIAS ${SKUSEL_AES_TARGET_NAME})
+target_include_directories(${SKUSEL_AES_TARGET_NAME} PUBLIC include)
 
 ###############################################################################
 # add library tests
 ###############################################################################
-if(LSKUSE_AES_BUILD_TESTING)
-  message(STATUS "Adding ${LSKUSE_AES_TARGET_NAME} tests")
+if(SKUSEL_AES_BUILD_TESTING)
+  message(STATUS "Adding ${SKUSEL_AES_TARGET_NAME} tests")
   include(CTest)
   # add google test
   add_executable(AESTests 
@@ -107,7 +110,7 @@ if(LSKUSE_AES_BUILD_TESTING)
     tests/test_aesblock.cpp
   )
   target_include_directories(AESTests PRIVATE src)
-  target_link_libraries(AESTests PUBLIC gtest_main ${LSKUSE_AES_TARGET_NAME})
+  target_link_libraries(AESTests PUBLIC gtest_main ${SKUSEL_AES_TARGET_NAME})
   include(GoogleTest)
   gtest_discover_tests(AESTests XML_OUTPUT_DIR "${PROJECT_BINARY_DIR}/TestResults")
 endif()
@@ -115,16 +118,16 @@ endif()
 ###############################################################################
 # make project installable
 ###############################################################################
-install(TARGETS ${LSKUSE_AES_TARGET_NAME}
-  EXPORT ${LSKUSE_AES_EXPORT_NAME}
-  RUNTIME DESTINATION ${LSKUSE_AES_BIN_INSTALL_DIR}
-  LIBRARY DESTINATION ${LSKUSE_AES_LIB_INSTALL_DIR}
-  ARCHIVE DESTINATION ${LSKUSE_AES_LIB_INSTALL_DIR}
-  INCLUDES DESTINATION ${LSKUSE_AES_INCLUDE_INSTALL_DIR}
+install(TARGETS ${SKUSEL_AES_TARGET_NAME}
+  EXPORT ${SKUSEL_AES_EXPORT_NAME}
+  RUNTIME DESTINATION ${SKUSEL_AES_BIN_INSTALL_DIR}
+  LIBRARY DESTINATION ${SKUSEL_AES_LIB_INSTALL_DIR}
+  ARCHIVE DESTINATION ${SKUSEL_AES_LIB_INSTALL_DIR}
+  INCLUDES DESTINATION ${SKUSEL_AES_INCLUDE_INSTALL_DIR}
 )
-foreach(header ${LSKUSE_AES_HEADERS})
+foreach(header ${SKUSEL_AES_HEADERS})
   install(FILES ${header}
-    DESTINATION ${LSKUSE_AES_INCLUDE_INSTALL_DIR}/lskuse
+    DESTINATION ${SKUSEL_AES_INCLUDE_INSTALL_DIR}/skusel
   )
 endforeach()
 
